@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,7 +14,7 @@ package org.openhab.binding.freeboxos.internal.handler;
 
 import static org.openhab.binding.freeboxos.internal.FreeboxOsBindingConstants.*;
 
-import java.time.ZonedDateTime;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -33,6 +33,8 @@ import org.openhab.core.thing.binding.ThingHandlerService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import inet.ipaddr.mac.MACAddress;
+
 /**
  * The {@link FreeplugHandler} is responsible for handling everything associated to a
  * powerline gateway managed by the freebox server
@@ -49,26 +51,40 @@ public class FreeplugHandler extends ApiConsumerHandler {
 
     @Override
     void initializeProperties(Map<String, String> properties) throws FreeboxException {
-        getManager(FreeplugManager.class).getPlug(getMac()).ifPresent(plug -> {
+        MACAddress mac = getMac();
+        if (mac == null) {
+            throw new FreeboxException(
+                    "initializeProperties is not possible because MAC address is undefined for the thing "
+                            + thing.getUID());
+        }
+        getManager(FreeplugManager.class).getPlug(mac).ifPresent(plug -> {
             properties.put(Thing.PROPERTY_MODEL_ID, plug.model());
             properties.put(ROLE, plug.netRole().name());
             properties.put(NET_ID, plug.netId());
-            properties.put(ETHERNET_SPEED, String.format("%d Mb/s", plug.ethSpeed()));
-            properties.put(LOCAL, Boolean.valueOf(plug.local()).toString());
-            properties.put(FULL_DUPLEX, Boolean.valueOf(plug.ethFullDuplex()).toString());
+            properties.put(ETHERNET_SPEED, "%d Mb/s".formatted(plug.ethSpeed()));
+            properties.put(LOCAL, Boolean.toString(plug.local()));
+            properties.put(FULL_DUPLEX, Boolean.toString(plug.ethFullDuplex()));
 
             if (plug.local()) { // Plug connected to the freebox does not provide rate up or down
                 List<Channel> channels = new ArrayList<>(getThing().getChannels());
+                int nbInit = channels.size();
                 channels.removeIf(channel -> channel.getUID().getId().contains(RATE));
-                updateThing(editThing().withChannels(channels).build());
+                if (nbInit != channels.size()) {
+                    updateThing(editThing().withChannels(channels).build());
+                }
             }
         });
     }
 
     @Override
     protected void internalPoll() throws FreeboxException {
-        getManager(FreeplugManager.class).getPlug(getMac()).ifPresent(plug -> {
-            updateChannelDateTimeState(LAST_SEEN, ZonedDateTime.now().minusSeconds(plug.inactive()));
+        MACAddress mac = getMac();
+        if (mac == null) {
+            throw new FreeboxException(
+                    "internalPoll is not possible because MAC address is undefined for the thing " + thing.getUID());
+        }
+        getManager(FreeplugManager.class).getPlug(mac).ifPresent(plug -> {
+            updateChannelDateTimeState(LAST_SEEN, Instant.now().minusSeconds(plug.inactive()));
 
             updateChannelString(LINE_STATUS, plug.ethPortStatus());
             updateChannelOnOff(REACHABLE, plug.hasNetwork());
@@ -84,11 +100,17 @@ public class FreeplugHandler extends ApiConsumerHandler {
     }
 
     public void reset() {
+        MACAddress mac = getMac();
+        if (mac == null) {
+            logger.warn("Freeplug restart is not possible because MAC address is undefined for the thing {}",
+                    thing.getUID());
+            return;
+        }
         try {
-            getManager(FreeplugManager.class).reboot(getMac());
-            logger.debug("Freeplug {} succesfully restarted", getMac());
+            getManager(FreeplugManager.class).reboot(mac);
+            logger.debug("Freeplug {} succesfully restarted", mac);
         } catch (FreeboxException e) {
-            logger.warn("Error restarting freeplug: {}", e.getMessage());
+            logger.warn("Error restarting freeplug {}: {}", mac, e.getMessage());
         }
     }
 
