@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -20,10 +20,10 @@ import java.net.URI;
 import java.time.format.DateTimeFormatter;
 import java.time.format.FormatStyle;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ScheduledExecutorService;
@@ -67,6 +67,7 @@ import org.openhab.core.auth.client.oauth2.OAuthClientService;
 import org.openhab.core.auth.client.oauth2.OAuthException;
 import org.openhab.core.auth.client.oauth2.OAuthFactory;
 import org.openhab.core.auth.client.oauth2.OAuthResponseException;
+import org.openhab.core.library.types.OnOffType;
 import org.openhab.core.library.types.QuantityType;
 import org.openhab.core.library.types.StringType;
 import org.openhab.core.library.unit.Units;
@@ -84,10 +85,10 @@ import org.slf4j.LoggerFactory;
 /**
  * The {@link LivisiBridgeHandler} is responsible for handling the LIVISI SmartHome controller including the connection
  * to the LIVISI SmartHome backend for all communications with the LIVISI SmartHome {@link DeviceDTO}s.
- * <p/>
+ * <p>
  * It implements the {@link AccessTokenRefreshListener} to handle updates of the oauth2 tokens and the
  * {@link EventListener} to handle {@link EventDTO}s, that are received by the {@link LivisiWebSocket}.
- * <p/>
+ * <p>
  * The {@link DeviceDTO}s are organized by the {@link DeviceStructureManager}, which is also responsible for the
  * connection
  * to the LIVISI SmartHome webservice via the {@link LivisiClient}.
@@ -132,12 +133,22 @@ public class LivisiBridgeHandler extends BaseBridgeHandler
 
     @Override
     public void handleCommand(final ChannelUID channelUID, final Command command) {
-        // not needed
+        if (CHANNEL_RESTART.equals(channelUID.getId())) {
+            commandRestart(command);
+        } else {
+            logger.debug("UNSUPPORTED channel {} for bridge {}.", channelUID.getId(), bridgeId);
+        }
+    }
+
+    private void commandRestart(Command command) {
+        if (OnOffType.ON.equals(command)) {
+            commandRestart();
+        }
     }
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(LivisiDeviceDiscoveryService.class);
+        return Set.of(LivisiDeviceDiscoveryService.class);
     }
 
     @Override
@@ -564,8 +575,8 @@ public class LivisiBridgeHandler extends BaseBridgeHandler
 
     @Override
     public void onError(final Throwable cause) {
-        if (cause instanceof Exception) {
-            handleClientException((Exception) cause);
+        if (cause instanceof Exception exception) {
+            handleClientException(exception);
         }
     }
 
@@ -727,7 +738,7 @@ public class LivisiBridgeHandler extends BaseBridgeHandler
                         (capabilityId) -> client.setVariableActuatorState(capabilityId, state));
                 // PSS / PSSO / ISS2 / BT-PSS
             } else if (DEVICE_PSS.equals(deviceType) || DEVICE_PSSO.equals(deviceType) || DEVICE_ISS2.equals(deviceType)
-                    || DEVICE_BT_PSS.equals((deviceType))) {
+                    || DEVICE_BT_PSS.equals(deviceType)) {
                 executeCommand(deviceId, CapabilityDTO.TYPE_SWITCHACTUATOR,
                         (capabilityId) -> client.setSwitchActuatorState(capabilityId, state));
             }
@@ -759,6 +770,18 @@ public class LivisiBridgeHandler extends BaseBridgeHandler
     public void commandSwitchAlarm(final String deviceId, final boolean alarmState) {
         executeCommand(deviceId, CapabilityDTO.TYPE_ALARMACTUATOR,
                 (capabilityId) -> client.setAlarmActuatorState(capabilityId, alarmState));
+    }
+
+    /**
+     * Sends the command to turn the siren of the {@link DeviceDTO} with the given id on or off. Is called by the
+     * {@link LivisiDeviceHandler} for siren {@link DeviceDTO}s like SIR.
+     *
+     * @param deviceId device id
+     * @param sirenState siren state (boolean)
+     */
+    public void commandSwitchSiren(final String deviceId, final String sirenState) {
+        executeCommand(deviceId, CapabilityDTO.TYPE_SIRENACTUATOR,
+                (capabilityId) -> client.setSirenActuatorState(capabilityId, sirenState));
     }
 
     /**
@@ -807,6 +830,19 @@ public class LivisiBridgeHandler extends BaseBridgeHandler
     public void commandSetRollerShutterStop(final String deviceId, final ShutterActionType action) {
         executeCommand(deviceId, CapabilityDTO.TYPE_ROLLERSHUTTERACTUATOR,
                 (capabilityId) -> client.setRollerShutterAction(capabilityId, action));
+    }
+
+    /**
+     * Restarts the SHC (bridge) device
+     */
+    public void commandRestart() {
+        try {
+            client.setRestartAction(bridgeId);
+
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.NONE, "Restarting...");
+        } catch (IOException e) {
+            handleClientException(e);
+        }
     }
 
     private void executeCommand(final String deviceId, final String capabilityType,
